--- a/02-android/app/src/main/res/values-en-port/string_po_en.xml
+++ b/02-android/app/src/main/res/values-en-port/string_po_en.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="texto_saludo">Good night portrait</string>
+    <color name="back1">#FF03DAC5</color>
+    <color name="color1">#E3242B</color>
 </resources>
