--- a/02-android/app/src/main/res/values-es-port/string_po_es.xml
+++ b/02-android/app/src/main/res/values-es-port/string_po_es.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="texto_saludo">Buenas noches portrait</string>
+    <color name="back1">#8C4698</color>
+    <color name="color1">#FFEB3B</color>
 </resources>
