--- a/Examen01/app/src/main/res/layout/activity_main.xml
+++ b/Examen01/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_layout_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#AEB3CA"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="446dp"
+        android:layout_height="262dp"
+        android:layout_marginTop="256dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_iniciar"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="283dp"
+        android:layout_height="107dp"
+        android:layout_marginBottom="292dp"
+        android:backgroundTint="#0D041C"
+        android:contextClickable="false"
+        android:cursorVisible="false"
+        android:text="INICIAR"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
