--- a/Examen01/app/src/main/res/layout/activity_lista_piezas.xml
+++ b/Examen01/app/src/main/res/layout/activity_lista_piezas.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".ListaPiezas">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PIEZAS"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.087" />
+
+    <TextView
+        android:id="@+id/id_dispositivo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <ListView
+        android:id="@+id/lv_lista_piezas"
+        android:layout_width="299dp"
+        android:layout_height="344dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="@+id/id_dispositivo"
+        app:layout_constraintStart_toStartOf="@+id/id_dispositivo"
+        app:layout_constraintTop_toBottomOf="@+id/id_dispositivo" />
+
+    <Button
+        android:id="@+id/btn_anadir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="AÑADIR"
+        app:layout_constraintEnd_toEndOf="@+id/lv_lista_piezas"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/lv_lista_piezas"
+        app:layout_constraintTop_toBottomOf="@+id/lv_lista_piezas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
