--- a/Examen01/app/src/main/res/menu/menu_pieza.xml
+++ b/Examen01/app/src/main/res/menu/menu_pieza.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/mi_eliminar_pieza"
+        android:title="Eliminar" />
+    <item
+        android:id="@+id/mi_editar_pieza"
+        android:title="Editar" />
 </menu>
