--- a/02-android/app/src/main/res/layout/activity_frecycler_view.xml
+++ b/02-android/app/src/main/res/layout/activity_frecycler_view.xml
@@ -6,4 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".FRecyclerView">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_entrenadores"
+        android:layout_width="254dp"
+        android:layout_height="374dp"
+        android:layout_marginTop="88dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_total_likes"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintStart_toStartOf="@+id/tv_total_likes"
+        app:layout_constraintTop_toBottomOf="@+id/tv_total_likes" />
+
+    <TextView
+        android:id="@+id/tv_total_likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="170dp"
+        tools:layout_editor_absoluteY="92dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
